2005-06-01  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate_options.cpp: error out if --assembly and --output-dir
	  are used together
	* doc/opannotate.1.in:
	* doc/oprofile.xml: update docucmentation according.

2005-05-31  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.9.1cvs

2005-05-27  John Levon  <levon@movementarian.org>

	* libpp/diff_container.cpp: convert the diffs into
	  an actual percentage!

	* configure.in: bump to 0.9

2005-05-26  John Levon  <levon@movementarian.org>

	* daemon/opd_cookie.c:
	* daemon/opd_sfile.c:
	* daemon/opd_trans.c: fixes for image filtering

2005-05-09  Will Cohen  <wcohen@redhat.com>

	* daemon/opd_sfile.c: Fix variable declaration to compile on gcc 3.4.
	
2005-05-04  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/common_option.cpp: split argument "{}" in two separate argument

2005-05-04  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: fix typos

2005-05-04  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/cverb.cpp:
	* libutil++/cverb.h: fix comment, remove unecessary friend declaration.

2005-05-04  John Levon  <levon@movementarian.org>

	* daemon/liblegacy/opd_kernel.c: fix previous workaround
	  so it only triggers on x86

2005-05-04  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: don't assume .text is the first SEC_CODE
	  section. Keep a map of section file offsets to fix up dbfd
	  symbols. Remove broken sanity checks.

2005-05-02  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: small change

2005-05-02  John Levon  <levon@movementarian.org>

	* daemon/Makefile.am:
	* daemon/opd_anon.h:
	* daemon/opd_anon.c:
	* daemon/init.c:
	* daemon/opd_cookie.c:
	* daemon/opd_events.h:
	* daemon/opd_events.c:
	* daemon/opd_mangling.c:
	* daemon/opd_sfile.h:
	* daemon/opd_sfile.c:
	* daemon/opd_trans.h:
	* daemon/opd_trans.c:
	* daemon/liblegacy/opd_sample_files.c:
	* doc/oprofile.xml:
	* libabi/abi.cpp:
	* libabi/opimport.cpp: